--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ __pycache__/
 /LVDS_LPDDR4_G529/kicad/autorouter/.claude/settings.local.json
 /LVDS_LPDDR4_G529/kicad/haasoscope_pro_max/~haasoscope_pro_max.kicad_sch.lck
 /LVDS_LPDDR4_G529/kicad/haasoscope_pro_max/~haasoscope_pro_max.kicad_pcb.lck
+/LVDS_LPDDR4_G529/kicad/autorouter/~routed_output.kicad_pcb.lck
